# RP2040

./: .gitignore  CMakeLists.txt  README.md
lib/: sim800l.h
src/: main.c  sim800l.c
